version 1.3.1 (not yet released)
================================
 * fix for issue #211 (bug in masked array handling in date2num)
 * switch from travis/appveyor to github actions for CI/CD.

version 1.3.0 (release tag v1.3.0rel)
=====================================
 * zero pad years in strtime (issue #194)
 * have cftime.datetime constuctor create 'calendar-aware' instances (default is
   'standard' calendar, if calendar='' or None the instance is not calendar aware and some
   methods, like dayofwk, dayofyr, __add__ and __sub__, will not work). Fixes issue #198.
   The calendar specific sub-classes are now deprecated, but remain for now
   as stubs that just instantiate the base class and override __repr__.
 * update regex in _cpdef _parse_date so reference years with more than four
   digits can be handled. 
 * Change default calendar in cftime.date2num from 'standard' to None
   (calendar associated with first input datetime object is used).
 * add `cftime.datetime.tzinfo=None` for compatibility with python datetime
   (issue #208).

version 1.2.1 (release tag v1.2.1rel)
=====================================
 * num2date uses 'proleptic_gregorian' scheme when basedate is post-Gregorian but date is pre-Gregorian
   (issue #182).
 * fix 1.2.0 regression (date2num no longer works with numpy scalar array inputs, issue #185).
 * Fix for issue #187 (have date2num round to the nearest second when within 1
   microsecond).
 * Fix for issue #189 (leap years calculated incorrectly for negative years in
   proleptic_gregorian calendar).

version 1.2.0 (release tag v1.2.0rel)
=====================================
 * Return the default values of dayofwk and dayofyr when calendar
   is '' (issue #173).
 * fix treatment of masked arrays in num2date and date2num (issue #175).
   Also make sure masked arrays are output from num2date/date2num if
   masked arrays are input.
 * Where possible, use timedelta arithmetic to decode times exactly within
   num2date (issue #171).