@@ -2,6 +2,7 @@ version 1.3.1 (not yet released)
 ================================
  * fix for issue #211 (bug in masked array handling in date2num)
  * switch from travis/appveyor to github actions for CI/CD.
+ * print more informative error message if trying to import from install dir.
 
 version 1.3.0 (release tag v1.3.0rel)
 =====================================
